# shiptracker-api

./: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  alembic.ini  build.sh  check-deploy.sh  check_enum.py  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  test_enum_serialization.py  test_seller_implementation.py
alembic/: env.py
alembic/versions/: 20251118_065540_add_invoice_number_field_to_shipments.py  20251120_120000_create_occurrence_codes_table.py  20251120_130000_add_occurrence_code_to_tracking_events.py  20251120_170000_normalize_shipment_statuses.py  20251120_180000_add_timezone_to_datetime_columns.py  20251201_100000_add_carriers_table.py  20251201_110000_add_feedback_table.py  20251201_120000_add_seller_role_and_seller_id_to_shipments.py  20251202_130000_add_must_change_password_to_users.py  __init__.py
app/: main.py
app/core/: config.py  lifespan.py  log.py  seed.py  timezone.py
app/db/: conn.py  helpers.py  mongo.py  redis.py
app/models/: audit_log.py  automation.py  base.py  carrier.py  client.py  client_interaction.py  enums.py  feedback.py  (+7 more)
scripts/: CARRIERS_SEED.md  README.md  check_and_seed_carriers_prod.py  check_codes.py  create_test_data.py  seed_carriers.py  seed_occurrence_codes.py  test_prefect_validation.py  test_seed.py  test_status_validation.py  test_timeline_endpoint.py  test_timeline_simple.py  test_tracking_updates.py
tests/: README.md  conftest.py  conftest_tracking_updates.py  test_auth.py  test_carriers.py  test_clients.py  test_shipments.py  test_tracking_updates.py  test_users.py
(+30 files in other folders)
